welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: not found: value setcouleurBrosse
def coupstylo(c:Color) {setcouleurBrosse(c);baisseBrosse();leveBrosse()}
                        ^